[gd_scene load_steps=7 format=3 uid="uid://b3lkcxtq47sjn"]

[ext_resource type="Script" path="res://menu/main_menu.gd" id="1_imy4q"]
[ext_resource type="FontFile" uid="uid://ch1217g2yvnil" path="res://assets/fonts/Jacquard24-Regular.ttf" id="1_rdgvj"]
[ext_resource type="Shader" path="res://shaders/crt-filter.gdshader" id="2_7imwt"]
[ext_resource type="AudioStream" uid="uid://bljywgdwgg8m6" path="res://sounds/atmo-tense.wav" id="4_plo13"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ojmt3"]
bg_color = Color(0.186673, 0.0902076, 0.0969613, 1)
border_width_left = 16
border_width_top = 16
border_width_right = 16
border_width_bottom = 16
border_color = Color(0.478431, 0.211765, 0.266667, 0.768627)
border_blend = true
shadow_color = Color(0.00663366, 0.00137899, 0.000550259, 0.278431)
shadow_size = 4

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4c6qn"]
shader = ExtResource("2_7imwt")
shader_parameter/resolution = Vector2(1920, 640)
shader_parameter/scan_line_amount = 0.8
shader_parameter/warp_amount = 0.13
shader_parameter/noise_amount = 0.04
shader_parameter/interference_amount = 0.2
shader_parameter/grille_amount = 0.2
shader_parameter/grille_size = 1.5
shader_parameter/vignette_amount = 0.6
shader_parameter/vignette_intensity = 0.4
shader_parameter/aberation_amount = 0.3
shader_parameter/roll_line_amount = 0.3
shader_parameter/roll_speed = 1.0
shader_parameter/scan_line_strength = -8.0
shader_parameter/pixel_strength = -3.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_imy4q")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.184314, 0.105882, 0.109804, 0.862745)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -388.0
offset_top = 158.0
offset_right = 379.0
offset_bottom = 323.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.3244, 0.0132748, 0.126356, 1)
theme_override_colors/font_shadow_color = Color(0.0393668, 0.0152314, 0.0164441, 0.247059)
theme_override_colors/font_outline_color = Color(0.878431, 0.137255, 0.4, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("1_rdgvj")
theme_override_font_sizes/font_size = 164
text = "Crimson Axiom"

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 375.0
offset_right = 300.0
offset_bottom = 415.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="StartButton" type="Button" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.761087, 0.650624, 1)
theme_override_colors/font_outline_color = Color(0.466623, 0.0286927, 0.194378, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 36
theme_override_styles/focus = SubResource("StyleBoxFlat_ojmt3")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ojmt3")
theme_override_styles/hover = SubResource("StyleBoxFlat_ojmt3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ojmt3")
theme_override_styles/normal = SubResource("StyleBoxFlat_ojmt3")
text = "START GAME"

[node name="LoadButton" type="Button" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.761087, 0.650624, 1)
theme_override_colors/font_outline_color = Color(0.466623, 0.0286927, 0.194378, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 36
theme_override_styles/focus = SubResource("StyleBoxFlat_ojmt3")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ojmt3")
theme_override_styles/hover = SubResource("StyleBoxFlat_ojmt3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ojmt3")
theme_override_styles/normal = SubResource("StyleBoxFlat_ojmt3")
text = "LOAD SAVE"

[node name="OptionsButton" type="Button" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.761087, 0.650624, 1)
theme_override_colors/font_outline_color = Color(0.466623, 0.0286927, 0.194378, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 36
theme_override_styles/focus = SubResource("StyleBoxFlat_ojmt3")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ojmt3")
theme_override_styles/hover = SubResource("StyleBoxFlat_ojmt3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ojmt3")
theme_override_styles/normal = SubResource("StyleBoxFlat_ojmt3")
text = "OPTIONS
"

[node name="QuitButton" type="Button" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.761087, 0.650624, 1)
theme_override_colors/font_outline_color = Color(0.466623, 0.0286927, 0.194378, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 36
theme_override_styles/focus = SubResource("StyleBoxFlat_ojmt3")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ojmt3")
theme_override_styles/hover = SubResource("StyleBoxFlat_ojmt3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ojmt3")
theme_override_styles/normal = SubResource("StyleBoxFlat_ojmt3")
text = "QUIT GAME"

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 2

[node name="CrtFilter" type="ColorRect" parent="CanvasLayer2"]
material = SubResource("ShaderMaterial_4c6qn")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_plo13")
volume_db = -8.525
